@@ -192,11 +192,6 @@ class TempFileMunge(object):
         if cmdlist is not None:
             return cmdlist
 
-        # We do a normpath because mktemp() has what appears to be
-        # a bug in Windows that will use a forward slash as a path
-        # delimiter.  Windows' link mistakes that for a command line
-        # switch and barfs.
-        #
         # Default to the .lnk suffix for the benefit of the Phar Lap
         # linkloc linker, which likes to append an .lnk suffix if
         # none is given.
@@ -206,7 +201,7 @@ class TempFileMunge(object):
             suffix = '.lnk'
 
         fd, tmp = tempfile.mkstemp(suffix, text=True)
-        native_tmp = SCons.Util.get_native_path(os.path.normpath(tmp))
+        native_tmp = SCons.Util.get_native_path(tmp)
 
         if env.get('SHELL', None) == 'sh':
             # The sh shell will try to escape the backslashes in the
