@@ -178,61 +178,68 @@ def piped_spawn(sh, escape, cmd, args, env, stdout, stderr):
     #   we redirect it into a temporary file tmpFileStdout
     #   (tmpFileStderr) and copy the contents of this file
     #   to stdout (stderr) given in the argument
+    # Note that because this will paste shell redirection syntax
+    # into the cmdline, we have to call a shell to run the command,
+    # even though that's a bit of a performance hit.
     if not sh:
         sys.stderr.write("scons: Could not find command interpreter, is it in your PATH?\n")
         return 127
-    else:
-        # one temporary file for stdout and stderr
-        tmpFileStdout = os.path.normpath(tempfile.mktemp())
-        tmpFileStderr = os.path.normpath(tempfile.mktemp())
 
-        # check if output is redirected
-        stdoutRedirected = 0
-        stderrRedirected = 0
-        for arg in args:
-            # are there more possibilities to redirect stdout ?
-            if arg.find( ">", 0, 1 ) != -1 or arg.find( "1>", 0, 2 ) != -1:
-                stdoutRedirected = 1
-            # are there more possibilities to redirect stderr ?
-            if arg.find( "2>", 0, 2 ) != -1:
-                stderrRedirected = 1
+    # one temporary file for stdout and stderr
+    tmpFileStdout, tmpFileStdoutName = tempfile.mkstemp(text=True)
+    os.close(tmpFileStdout)  # don't need open until the subproc is done
+    tmpFileStderr, tmpFileStderrName = tempfile.mkstemp(text=True)
+    os.close(tmpFileStderr)
 
-        # redirect output of non-redirected streams to our tempfiles
-        if stdoutRedirected == 0:
-            args.append(">" + str(tmpFileStdout))
-        if stderrRedirected == 0:
-            args.append("2>" + str(tmpFileStderr))
+    # check if output is redirected
+    stdoutRedirected = False
+    stderrRedirected = False
+    for arg in args:
+        # are there more possibilities to redirect stdout ?
+        if arg.find(">", 0, 1) != -1 or arg.find("1>", 0, 2) != -1:
+            stdoutRedirected = True
+        # are there more possibilities to redirect stderr ?
+        if arg.find("2>", 0, 2) != -1:
+            stderrRedirected = True
 
-        # actually do the spawn
+    # redirect output of non-redirected streams to our tempfiles
+    if not stdoutRedirected:
+        args.append(">" + tmpFileStdoutName)
+    if not stderrRedirected:
+        args.append("2>" + tmpFileStderrName)
+
+    # actually do the spawn
+    try:
+        args = [sh, '/C', escape(' '.join(args))]
+        ret = spawnve(os.P_WAIT, sh, args, env)
+    except OSError as e:
+        # catch any error
         try:
-            args = [sh, '/C', escape(' '.join(args))]
-            ret = spawnve(os.P_WAIT, sh, args, env)
-        except OSError as e:
-            # catch any error
-            try:
-                ret = exitvalmap[e.errno]
-            except KeyError:
-                sys.stderr.write("scons: unknown OSError exception code %d - %s: %s\n" % (e.errno, cmd, e.strerror))
-            if stderr is not None:
-                stderr.write("scons: %s: %s\n" % (cmd, e.strerror))
-        # copy child output from tempfiles to our streams
-        # and do clean up stuff
-        if stdout is not None and stdoutRedirected == 0:
-            try:
-                with open(tmpFileStdout, "r" ) as tmp:
-                    stdout.write(tmp.read())
-                os.remove(tmpFileStdout)
-            except (IOError, OSError):
-                pass
+            ret = exitvalmap[e.errno]
+        except KeyError:
+            sys.stderr.write("scons: unknown OSError exception code %d - %s: %s\n" % (e.errno, cmd, e.strerror))
+        if stderr is not None:
+            stderr.write("scons: %s: %s\n" % (cmd, e.strerror))
 
-        if stderr is not None and stderrRedirected == 0:
-            try:
-                with open(tmpFileStderr, "r" ) as tmp:
-                    stderr.write(tmp.read())
-                os.remove(tmpFileStderr)
-            except (IOError, OSError):
-                pass
-        return ret
+    # copy child output from tempfiles to our streams
+    # and do clean up stuff
+    if stdout is not None and not stdoutRedirected:
+        try:
+            with open(tmpFileStdoutName, "r") as tmpFileStdout:
+                stdout.write(tmpFileStdout.read())
+            os.remove(tmpFileStdoutName)
+        except (IOError, OSError):
+            pass
+
+    if stderr is not None and not stderrRedirected:
+        try:
+            with open(tmpFileStderrName, "r") as tmpFileStderr:
+                stderr.write(tmpFileStderr.read())
+            os.remove(tmpFileStderrName)
+        except (IOError, OSError):
+            pass
+
+    return ret
 
 
 def exec_spawn(l, env):
